# kv-estonia-ceny

./: .gitignore  Kwak_Stanislaw_Raport_Ekstrakcja_ADS.docx  LICENSE  PLIKI.md  README.md  co_occurrence.gexf  eksporter_zdjec.py  estonia_ha.txt  estonia_nieruchomosci.txt  pyproject.toml  translation_ex (1).py  word_tag (1).py
docs/html/: index.html  repozytorium.html  search.js
folder1/: # prosty_scraper_kv.py  11.03  11.03 real  beautifulsoup.py  cenarozklad.py  class_attributes_guide.md  classtruskawka.py  debug_ex.py  etap_1_cloudscraper.py  etap_2_cloudscraper.py  etap_3_cloudscraper.py  etap_4_cloudscraper.py  etap_5_cloudscraper.py  example_1.html  example_2.html  example_3.html  exercises (1).py  exercises.py  fghj.py  img_download_ex.py  import cloudscraper.py  import requests.py  import___sqlite3.py  main.py  multi_threads.py  network_ruj.py  ogloszenia.txt  pca_img_v2.py  photo_prep_oto.py  sql wywolanie.py  stems_lemmas.py  tempCodeRunnerFile.py  test_exercises-2.py  test_exercises.py  usuwanie.py  zad_1.py  zad_1_TDD.py  zad_2.py  zad_3.py  zad_4.py  (+1 more)
folder1/ruj_s/: ruj_BookSection_1.json  ruj_BookSection_2.json  ruj_BookSection_3.json  ruj_BookSection_4.json  ruj_BookSection_5.json  ruj_BookSection_6.json  ruj_Book_1.json  ruj_JournalArticle_1.json  ruj_JournalArticle_2.json  (+3 more)
notebooks/: eda_kv.ipynb
raport/: RAPORT.md
scripts/: generuj_dokumentacje.py  trenuj_model.py  wzbogac_baze_nlp.py
src/: main.py
tests/: test_cechy_nlp.py  test_integracja_model.py  test_logi_audytu.py  test_walidacja.py
zajecia 4/: animals_skeleton.py  test_animals.py
(+39 files in other folders)
