[project]
name = "repozytorium"
version = "0.1.0"
description = "Ekstrakcja danych z KV.ee i szacowanie cen nieruchomości"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Stanisław Kwak", email = "stanislaw.kwak@student.uj.edu.pl" }
]
dependencies = [
    "flet>=0.84.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "stanza>=1.8.0",
    "PyStemmer>=2.2.0",
]

[project.optional-dependencies]
nlp_demo = [
    "spacy>=3.7.0",
    "nltk>=3.8.0",
]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop>=0.84.0",
    "flet-web>=0.84.0",
    "pytest>=8.0.0",
    "pdoc>=14.0.0",
]

[tool.flet]
org = "edu.course"
product = "repozytorium"
company = "Course Project"
copyright = "Copyright (C) 2026 MIT License"

[tool.flet.app]
path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
